feat: add Inter font and update Nav Links styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,8 +70,8 @@
 /* Nav Links */
 @utility font-family-nav-link {
   /* Fonts */
-  font-family: var(--font-space-grotesk);
-  @apply text-xs font-medium tracking-widest uppercase lg:text-sm;
+  font-family: var(--font-inter);
+  @apply text-xs font-normal tracking-widest uppercase lg:text-sm;
 }
 
 /* Body (large) */
