refactor: update font weights and utility classes for improved typography

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@
 @utility font-family-header {
   /* Fonts */
   font-family: var(--font-space-grotesk);
-  @apply text-9xl font-bold tracking-tighter uppercase;
+  @apply text-7xl font-bold tracking-tighter uppercase md:text-8xl lg:text-9xl;
 }
 
 /* Section */
@@ -74,17 +74,24 @@
   @apply text-xs font-normal tracking-widest uppercase lg:text-sm;
 }
 
+/* Buttons */
+@utility font-family-button {
+  /* Fonts */
+  font-family: var(--font-inter);
+  @apply text-sm font-bold tracking-widest uppercase;
+}
+
 /* Body (large) */
 @utility font-family-regular-lg {
   /* Fonts */
   font-family: var(--font-space-grotesk);
-  @apply text-xl font-normal tracking-tight;
+  @apply text-sm font-normal tracking-tight md:text-lg lg:text-xl;
 }
 
 /* Body (small) */
 @utility font-family-regular-sm {
   /* Fonts */
-  font-family: var(--font-space-grotesk);
+  font-family: var(--font-inter);
   @apply text-sm font-normal;
 }
 
