--- a/src/app/(snap)/snap-globals.css
+++ b/src/app/(snap)/snap-globals.css
@@ -3,6 +3,10 @@
 @layer utilities {
   html,
   body {
-    @apply selection:bg-accent h-screen overflow-y-scroll scroll-smooth bg-black selection:text-white md:snap-y md:snap-mandatory;
+    @apply selection:bg-accent h-screen overflow-y-scroll scroll-smooth bg-black selection:text-white;
+  }
+
+  body {
+    @apply md:snap-y md:snap-mandatory;
   }
 }
